--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,27 @@ body {
   }
 
   h1 {
-    font-weight: 900;
-    font-size: 2.5em; /* 40px/16=2.5em */
+    font-weight: 500;
+    font-size: 5em;
   }
 
   h2 {
     color: #FFA45B;
-    font-size: 1.875em; /* 30px/16=1.875em */
-    font-weight: 500;
+    font-size: 4em;
+    font-weight: 300;
+  }
+
+  h3 {
+    font-weight: 400;
+    font-family: 'Work Sans', sans-serif;
+    text-transform: uppercase;
+    font-size: 2em;
+    text-shadow: 2px 2px 5px #ff775e;
   }
 
   p {
-    font-size: 	1.1250em;
+    font-size: 	2em;
+    font-weight: 400;
   }
 
 
