--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,11 @@ body {
   }
 
   h2 {
-    font-size: 6em;
+    color: #f4cdb5;
+    font-size: 3em;
     font-weight: 800;
+    text-transform: uppercase;
+
   }
 
   h3 {
