--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,10 @@ body {
 
   h1 {
     font-weight: 900;
-    font-size: 8em;
+    font-size: 10em;
     color: #f1c9cc;
     opacity: 0.5;
+    text-transform: uppercase;
   }
 
   h2 {
