--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
   h4 {
     color: #f92765;
     font-weight: 600;
-    font-size: 4em;
+    font-size: 2.5em;
   }
 
   p {
@@ -49,6 +49,10 @@ body {
 
   a:active {
     color: #1f049f;
+  }
+
+  ul {
+    list-style-type: none;
   }
 
 
