--- a/freecodecamp/survey-form-styles.css
+++ b/freecodecamp/survey-form-styles.css
@@ -1,12 +1,24 @@
 body {
-    background-color: darkgray;
+    background-color: black;
     background-image: url("images/pexels-james-wheeler-1542493.jpg");
+    background-repeat: no-repeat; 
+    background-size: cover;
     font-family: 'Roboto Mono', monospace;
 }
 
 h1, h2 {
     color: white;
     text-align: center;
+}
+
+h1 {
+    font-size: 2.5em;
+}
+
+h2 {
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 400;
 }
 
 img {
