--- a/freecodecamp/survey-form-styles.css
+++ b/freecodecamp/survey-form-styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    background-image: url("images/pexels-james-wheeler-1542493.jpg");
+    background-image: url("https://images.pexels.com/photos/1542493/pexels-photo-1542493.jpeg");
     background-repeat: no-repeat; 
     background-size: cover;
     font-family: 'Roboto Mono', monospace;
