--- a/freecodecamp/styles.css
+++ b/freecodecamp/styles.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Roboto Mono', monospace;
 }
 
-h1, h2 {
+h1, p {
     color: white;
     text-align: center;
 }
@@ -15,7 +15,7 @@ h1 {
     font-size: 2.5em;
 }
 
-h2 {
+p {
     font-size: 20px;
     font-style: italic;
     font-weight: 400;
