--- a/freecodecamp/styles.css
+++ b/freecodecamp/styles.css
@@ -4,6 +4,8 @@ body {
     background-repeat: no-repeat; 
     background-size: cover;
     font-family: 'Roboto Mono', monospace;
+    width: 100%;
+height: 100vh;
 }
 
 h1, p {
