--- a/freecodecamp/styles.css
+++ b/freecodecamp/styles.css
@@ -33,6 +33,7 @@ img {
 
 form {
     background-color: #F4F5F6;
+    border-radius: 11px;
     width: 60vw;
     max-width: 700px;
     min-width: 300px;
