--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,16 @@ body {
 
   h1 {
     font-weight: 900;
-    font-size: 10em;
+    font-size: 8em;
     color: #f1c9cc;
     opacity: 0.5;
     text-transform: uppercase;
+    margin: 0 auto;
   }
 
   h2 {
     color: #f4cdb5;
-    font-size: 5em;
+    font-size: 3em;
     font-weight: 800;
     text-transform: uppercase;
 
