--- a/freecodecamp/survey-form/styles.css
+++ b/freecodecamp/survey-form/styles.css
@@ -8,20 +8,24 @@ body {
     height: 100vh;
 }
 
-h1, p {
+h1 {
     color: white;
+    font-size: 2.5em;
     text-align: center;
 }
 
-h1 {
-    font-size: 2.5em;
+h2 {
+    color: white;
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 1.3em;
 }
 
 p {
     font-size: 1em;
-    font-style: italic;
     font-weight: 400;
     color: black;
+    text-align: left;
 }
 
 img {
@@ -45,6 +49,11 @@ form {
 fieldset {
     border: none;
     padding 5rem 0;
+}
+
+hr {
+    border-top: 2px dotted purple;
+    margin: 30px 0;
 }
 
 label {
