--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ body {
   .se-resize {cursor: se-resize;}
   .sw-resize {cursor: sw-resize;}
   .text {cursor: text;}
-  .url {cursor: url(myBall.cur),auto;}
+  .url {cursor: url(icons8-heart-50.cur),auto;}
   .w-resize {cursor: w-resize;}
   .wait {cursor: wait;}
   .zoom-in {cursor: zoom-in;}
