added 3D pointer cursor

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ body {
   .url {cursor: url(freecodecamp/icons8-heart-50.cur),auto;}
   .url2 {cursor: url(freecodecamp/icons8-smile-50.cur),auto;}
   .url-wink {cursor: url(freecodecamp/icons8-wink-50.cur),auto;}
+  .url-3d-pointer {cursor: url(freecodecamp/icons8-3d-pointer-50.cur),auto;}
 
   /* custom URL cursor name experiment */
   .url-v {cursor: url(freecodecamp/icons8-sign-language-v-50.cur),auto;
