changed title to reflect coding practice

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   a:hover {
     color: #f92765;
     text-decoration-style: wavy;
-    text-decoration-color: #F1C9CC;
+    text-decoration-color: #190108;
   }
 
   a:active {
