updated font family to azeret mono

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #fffce5;
-    font-family: 'Darker Grotesque', sans-serif;
+  font-family: 'Azeret Mono', monospace;
   }
 
   h1 {
