--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,13 @@ body {
     font-weight: 900;
     font-size: 3em;
     text-transform: uppercase;
-    margin: 0 auto;
+    margin-left: 2rem;
   }
 
   h2 {
     font-size: 2em;
     font-weight: 400;
+    margin-left: 2rem;
   }
 
   h3 {
@@ -23,9 +24,18 @@ body {
     font-size: 2em;
   }
 
-  hr {
-    border-top: 1px dotted goldenrod;
-  }
+  /* hr {
+    border-top: 2px dashed black;
+    margin-top: 100px;
+  } */
+
+hr {
+  border: 2px solid black;
+  border-radius: 5px;
+  max-width: 900px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 
   img {
     margin: 50px;
