--- a/styles.css
+++ b/styles.css
@@ -24,17 +24,12 @@ body {
     font-size: 2em;
   }
 
-  /* hr {
-    border-top: 2px dashed black;
-    margin-top: 100px;
-  } */
-
 hr {
-  border: 2px solid black;
+  border: 2px dotted black;
   border-radius: 5px;
   max-width: 900px;
   margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 80px;
 }
 
   img {
