--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 footer {
     text-align: center;
     line-height: 35px;
+    margin-bottom: 50px;
 }
 
 h1 {
@@ -49,7 +50,7 @@ hr {
   border: 2px dotted black;
   border-radius: 5px;
   max-width: 900px;
-  margin-top: 100px;
+  margin-top: 80px;
   margin-bottom: 80px;
 }
 
