use FCC survey form project img as URL

--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,16 @@ p {
     color: magenta;
   }
 
-  .courses {
-    display: flex;
-  }
-  
+/* CLASSES */
+
+.courses {
+  display: flex;
+}
+
+.fcc-projects {
+  display: flex;
+}
+
 /* Cursor Property Shenanigans */
 
 .alias {
