added white background to <ul> skillcrush projects

--- a/styles.css
+++ b/styles.css
@@ -69,10 +69,16 @@ p {
     color: magenta;
   }
 
-/* CLASSES */
+/* Skillcrush page */
 .baby-coding-bunny {
   background-color: #fff2e6;
 }
+
+.skillcrush-projects {
+  background-color: white;
+}
+
+/* ---- */
 
 .courses {
   display: flex;
