changed <span> <a> color to brown

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ p {
   }
 
   span a {
-    color: magenta;
+    color: #996633;
   }
 
 /* Skillcrush page */
@@ -77,6 +77,8 @@ p {
 .skillcrush-projects {
   background-color: white;
   padding: 25px;
+  border: 1px solid #663300;
+  max-width: 900px;
 }
 
 /* ---- */
