--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,12 @@ p {
   background-color: #fff2e6;
 }
 
-.skillcrush-projects {
+ .skillcrush-projects {
   background-color: white;
+  display: flex;
   padding: 25px;
   border: 1px solid #663300;
-  max-width: 600px;
+  max-width: 400px;
 }
 
 /* HOME (index.html) CLASSES */
