--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ p {
   display: flex;
   padding: 25px;
   border: 1px solid #663300;
-  max-width: 400px;
+  max-width: 500px;
+  margin-right: 25px;
 }
 
 /* HOME (index.html) CLASSES */
