moved IM Fell English SC to <h3> styling

--- a/freecodecamp/tribute-page/style.css
+++ b/freecodecamp/tribute-page/style.css
@@ -1,4 +1,8 @@
 body {
 font-family: 'IM Fell English', serif;
-font-family: 'IM Fell English SC', serif;
 }
+
+h3 {
+    font-family: 'IM Fell English SC', serif;
+}
+
