--- a/freecodecamp/tribute-page/style.css
+++ b/freecodecamp/tribute-page/style.css
@@ -2,11 +2,22 @@ h1, h2, p {
 font-family: 'IM Fell English', serif;
 }
 
+h1 {
+    font-size: 3em;
+    text-align: center;
+}
+
+h2 {
+    font-size: 2.5em;
+    font-style: italic;
+    text-align: center;
+}
+
 h3 {
     font-family: 'IM Fell English SC', serif;
     font-size: 2em;
 }
 
 p {
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
