--- a/freecodecamp/tribute-page/style.css
+++ b/freecodecamp/tribute-page/style.css
@@ -1,5 +1,10 @@
+* {
+    background-color: #E7BFAD;
+}
+
 h1, h2, p {
-font-family: 'IM Fell English', serif;
+    font-family: 'IM Fell English', serif;
+    color: #43343B;
 }
 
 h1 {
@@ -17,6 +22,7 @@ h2 {
 h3 {
     font-family: 'IM Fell English SC', serif;
     font-size: 2em;
+    color: #43343B;
 }
 
 p {
