changed image from jpg to png

--- a/freecodecamp/tribute-page/style.css
+++ b/freecodecamp/tribute-page/style.css
@@ -1,9 +1,10 @@
 img {
-	display: block;
-	height: auto;
+    max-width: 600px;
 }
 
+/* required for code FCC submit/user stories
 #image {
 	height: auto;
 	max-width: 100%;
 }
+*/
