--- a/freecodecamp/tribute-page/styles.css
+++ b/freecodecamp/tribute-page/styles.css
@@ -1,6 +1,25 @@
 body {
     background-color: #E7BFAD;
     font-family: 'Diphylleia', serif;
+    color: #43343B;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 32px;
+}
+
+h3 {
+    font-size: 20px;
+    color: #FF4B00;
+}
+
+p {
+    font-size: 18px;
+}
 
 img {
     max-width: 600px;
