--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,11 @@ hr {
   margin-bottom: 80px;
 }
 
+img {
+  margin: 30px;
+  max-width: 500px;
+}
+
 p {
     font-size: 	1.5em;
     font-weight: 500;
