--- a/styles.css
+++ b/styles.css
@@ -62,12 +62,25 @@ img {
 
 p {
     font-size: 	1.5em;
-    font-weight: 500;
+    font-weight: 300;
+    max-width: 900px;
   }
 
   ul {
     list-style-type: none;
     line-height: 35px;
+  }
+
+  /* Navigation styling */
+
+  nav a:link {
+    text-transform: uppercase;
+    font-size: 1.5em;
+  }
+
+  nav a:hover {
+    color: black;
+    background-color: gold;
   }
 
 /* Skillcrush page */
