--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ hr {
 
 img {
   margin: 30px;
-  max-width: 500px;
+  max-width: 1000px;
 }
 
 p {
@@ -71,17 +71,31 @@ p {
     line-height: 35px;
   }
 
-  /* Navigation styling */
+/* Navigation styling */
+nav {
+  background-color: white;
+  border: 1px solid black;
+  list-style-type: none;
+  text-align: left;
+  max-width: 1100px;
+  margin: 0;
+}
 
-  nav a:link {
+nav li {
+  display: inline-block;
+  padding: 10px;
+}
+
+nav a:link {
     text-transform: uppercase;
     font-size: 1.5em;
-  }
+}
 
-  nav a:hover {
+nav a:hover {
     color: black;
     background-color: gold;
-  }
+}
+
 
 /* Skillcrush page */
 .baby-coding-bunny {
