--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ nav a:hover {
   background-color: lavender;
 }
 
-/* HOME (index.html) CLASSES */
+/* HOME/all (index.html) CLASSES */
 
 .courses {
   display: flex;
@@ -136,6 +136,11 @@ nav a:hover {
   border: 1px solid black;
   padding: 25px;
   margin-right: 25px;
+}
+
+.header-img {
+  max-width: 50%;
+  max-height: 50%;
 }
 
 /* FREE CODE CAMP PAGE CLASSES */
