--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,17 @@ nav a:hover {
   text-transform: uppercase;
 }
 
+.skillcrush-archive-projects {
+  display: flex;
+  margin-top: 100px;
+  flex-wrap: wrap;
+}
+
+.skillcrush-archive-projects img {
+    max-width: 400px;
+    gap: 50px;
+  }
+
 /* About projects page */
 .about-page {
   background-color: lavender;
