--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,11 @@ nav a:hover {
 
 .skillcrush-archive-projects {
   display: flex;
-  margin-top: 100px;
+  margin-top: 50px;
+  max-width: 950px;
   flex-wrap: wrap;
+  background-color: white;
+  border: 1px solid black;
 }
 
 .skillcrush-archive-projects img {
