--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,9 @@ img {
 }
 
 p {
-    font-size: 	1.5em;
+    font-size: 	1.2em;
     font-weight: 300;
+    line-height: 1.6;
     max-width: 900px;
   }
 
