--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ footer {
 h1 {
     font-weight: 900;
     font-size: 3em;
+    text-align: center;
     text-transform: uppercase;
 }
 
@@ -71,6 +72,7 @@ p {
     font-size: 	1.2em;
     font-weight: 300;
     line-height: 1.6;
+    margin-left: 100px;
     max-width: 900px;
   }
 
