--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,12 @@ nav a:hover {
       border-radius: 60px;
     }
 
+.page-description {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
 /* Cursor Property Shenanigans */
 
 .alias {
