--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ nav {
   list-style-type: none;
   text-align: left;
   max-width: 1100px;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav li {
