Hey bunny page styling

--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,13 @@ nav a:hover {
   max-width: 800px;
 }
 
+/* Hey bunny hey */
+.hey-bunny-page {
+  background-color: #E8F5CD;
+}
+
+
+
 /* Cursor Property Shenanigans */
 
 .alias {
