--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* GLOBAL STYLIN' */
+
 body {
   background-color: #fffce5;
   color: #333333;
@@ -81,7 +83,8 @@ p {
     line-height: 35px;
   }
 
-/* Navigation styling */
+/* NAV STYLIN' */
+
 nav {
   background-color: white;
   border: 1px solid black;
@@ -107,8 +110,55 @@ nav a:hover {
     background-color: gold;
 }
 
+/* HOME/GLOBAL CLASSES */
 
-/* Skillcrush page */
+.courses {
+  display: flex;
+}
+
+.courses h2 {
+  max-width: 400px;
+  background-color: white;
+  border: 1px solid black;
+  padding: 25px;
+  margin-right: 25px;
+}
+
+.header-img {
+  max-width: 20%;
+  max-height: 20%;
+}
+
+.page-description {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+/*----------- FCC, SKILLCRUSH, SCRIMBA, AND ABOUT PAGES STYLIN' -------------*/
+
+/* FREE CODE CAMP PAGE CLASSES ------------------ */
+
+.fcc {
+  background-color: lavender;
+}
+
+.fcc a {
+  color: purple;
+}
+
+.fcc-projects {
+  display: flex;
+  margin-top: 100px;
+  flex-wrap: wrap;
+}
+
+.fcc-projects img {
+  max-width: 400px;
+  gap: 50px;
+}
+
+/* SKILLCRUSH PROJECTS ------------------ */
 .baby-coding-bunny {
   background-color: #fff2e6;
 }
@@ -154,50 +204,7 @@ nav a:hover {
   text-align: center;
 }
 
-/* About projects page */
-.about-page {
-  background-color: lavender;
-}
 
-/* HOME/all (index.html) CLASSES */
-
-.courses {
-  display: flex;
-}
-
-.courses h2 {
-  max-width: 400px;
-  background-color: white;
-  border: 1px solid black;
-  padding: 25px;
-  margin-right: 25px;
-}
-
-.header-img {
-  max-width: 20%;
-  max-height: 20%;
-}
-
-/* FREE CODE CAMP PAGE CLASSES */
-
-.fcc {
-  background-color: lavender;
-}
-
-.fcc a {
-  color: purple;
-}
-
-.fcc-projects {
-  display: flex;
-  margin-top: 100px;
-  flex-wrap: wrap;
-}
-
-.fcc-projects img {
-  max-width: 400px;
-  gap: 50px;
-}
 
 /* GLOBAL CLASSES */
 
@@ -215,11 +222,7 @@ nav a:hover {
       border-radius: 60px;
     }
 
-.page-description {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
-}
+
 
 /* Hey bunny hey */
 .hey-bunny-page {
