more CSS clean up :)

--- a/styles.css
+++ b/styles.css
@@ -204,14 +204,14 @@ nav a:hover {
   text-align: center;
 }
 
-/* Hey bunny hey */
+/* Hey bunny hey ----------------- */
 .hey-bunny-page {
   background-color: #E8F5CD;
 }
 
 
 
-/* Cursor Property Shenanigans */
+/* ----------------- Cursor Property Shenanigans ------------- */
 
 .alias {
     cursor: alias;
