--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,9 @@ h1 {
 
 h2 {
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1.5em;
+    text-align: center;
 }
 
 h3 {
