--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ h4 {
   font-weight: 700;
   margin: 50px 0;
   text-transform: uppercase;
-  text-align: center;
+  margin-left: 100px;
 }
 
 hr {
