--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,11 @@ nav a:hover {
   gap: 50px;
 }
 
+.exercises.ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /* SKILLCRUSH PROJECTS ------------------ */
 .baby-coding-bunny {
   background-color: #fff2e6;
