--- a/freecodecamp/tech-documentation/styles.css
+++ b/freecodecamp/tech-documentation/styles.css
@@ -40,8 +40,8 @@ header {
 }
 
 #navbar li {
-  color: #4d4e53;
-  border-top: 1px solid;
+  border-top: 1px dotted;
+  color: #ff6d01;
   list-style: none;
   position: relative;
   width: 100%;
