<h2> styling to match body text

--- a/freecodecamp/tech-documentation/styles.css
+++ b/freecodecamp/tech-documentation/styles.css
@@ -20,11 +20,15 @@ body {
 }
 
 header {
-  color: #000066;
+  color: #ff4000;
   margin: 10px;
   text-align: center;
   font-size: 1.7em;
   font-weight: bold;
+}
+
+h2 {
+  color:#ff4000;
 }
 
 #main-doc header {
