--- a/freecodecamp/tech-documentation/styles.css
+++ b/freecodecamp/tech-documentation/styles.css
@@ -31,9 +31,16 @@ h2 {
   color:#ff4000;
 }
 
+#main-doc {
+  position: absolute;
+  margin-left: 310px;
+  padding: 20px;
+  margin-bottom: 110px;
+}
+
 #main-doc header {
   text-align: left;
-  margin: 0px;
+  margin-bottom: 25px;
 }
 
 #navbar ul {
@@ -53,17 +60,14 @@ h2 {
 
 #navbar a {
   display: block;
-  padding: 10px 30px;
-  color: #4d4e53;
+  padding: 10px 25px;
+  color: #333333;
   text-decoration: none;
   cursor: pointer;
 }
 
-#main-doc {
-  position: absolute;
-  margin-left: 310px;
-  padding: 20px;
-  margin-bottom: 110px;
+#navbar a:hover {
+  color: #ff6d01;
 }
 
 section li {
@@ -84,8 +88,8 @@ code {
   border-radius: 3px;
 }
 
+/* MOBILE */
 @media only screen and (max-width: 750px) {
-  /* For mobile phones: */
   #navbar ul {
     border: 1px solid;
     height: 207px;
