--- a/freecodecamp/tech-documentation/styles.css
+++ b/freecodecamp/tech-documentation/styles.css
@@ -1,3 +1,4 @@
+/* ----- ELEMENTS STYLING ----- */
 body {
   background-color: #fff1e6;
   color: #1a0b00;
@@ -6,17 +7,18 @@ body {
   min-width: 300px;
 }
 
-#navbar {
-  border-right: 1px dotted;
-  border-color: #ff6d01;
-  height: 100%;
-  min-width: 320px;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 300px;
-  
-  
+code {
+  display: block;
+  text-align: left;
+  white-space: pre-line;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #ffffff;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 3px;
 }
 
 header {
@@ -27,20 +29,20 @@ header {
   font-weight: bold;
 }
 
-h2 {
-  color:#ff4000;
+section li {
+  margin: 20px 0px 0px 20px;
 }
 
-#main-doc {
-  position: absolute;
-  margin-left: 310px;
-  padding: 20px;
-  margin-bottom: 110px;
-}
-
-#main-doc header {
-  text-align: left;
-  margin-bottom: 25px;
+/* ----- NAVBAR STYLING ----- */
+#navbar {
+  border-right: 1px dotted;
+  border-color: #ff6d01;
+  height: 100%;
+  min-width: 320px;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 300px;
 }
 
 #navbar ul {
@@ -70,25 +72,20 @@ h2 {
   color: #ff6d01;
 }
 
-section li {
-  margin: 20px 0px 0px 20px;
-}
-
-code {
-  display: block;
-  text-align: left;
-  white-space: pre-line;
-  position: relative;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 2;
-  background-color: #ffffff;
+/* ----- MAIN DOCUMENT STYLING ----- */
+#main-doc {
+  position: absolute;
+  margin-left: 310px;
   padding: 20px;
-  margin: 10px;
-  border-radius: 3px;
+  margin-bottom: 110px;
 }
 
-/* MOBILE */
+#main-doc header {
+  text-align: left;
+  margin-bottom: 25px;
+}
+
+/* ----- MOBILE STYLING ----- */
 @media only screen and (max-width: 750px) {
   #navbar ul {
     border: 1px solid;
