--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,11 @@ nav a:hover {
   color: purple;
 }
 
+.fcc ul {
+  background-color: white;
+  max-width: 1100px;
+}
+
 /* SKILLCRUSH PROJECTS ------------------ */
 .baby-coding-bunny {
   background-color: #fff2e6;
