--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,8 @@ nav a:hover {
 .fcc ul {
   background-color: white;
   max-width: 1100px;
+  padding-top: 15px;
+  margin-bottom: 50px;
 }
 
 /* SKILLCRUSH PROJECTS ------------------ */
