--- a/styles.css
+++ b/styles.css
@@ -149,11 +149,18 @@ nav a:hover {
   color: purple;
 }
 
+.fcc h2 {
+  margin-bottom: 50px;
+}
+
 .fcc ul {
   background-color: white;
+  border: 1px solid black;
   max-width: 1100px;
   padding-top: 15px;
   margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* SKILLCRUSH PROJECTS ------------------ */
