add background color to hey bunny page <ul>

--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,10 @@ nav a:hover {
   background-color: #E8F5CD;
 }
 
+.hey-bunny-page ul {
+  background-color: white;
+}
+
 
 
 /* ----------------- Cursor Property Shenanigans ------------- */
