--- a/styles.css
+++ b/styles.css
@@ -90,16 +90,17 @@ p {
 nav {
   background-color: white;
   border: 1px solid black;
+  display: inline-block;
   list-style-type: none;
   text-align: left;
   max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px;
 }
 
-nav li {
-  display: inline-block;
-  padding: 10px;
+nav a {
+  padding-right: 15px;
 }
 
 nav a:link {
