--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,9 @@ p {
 nav {
   background-color: white;
   border: 1px solid black;
-  display: inline-block;
   list-style-type: none;
-  text-align: left;
-  max-width: 1100px;
+  text-align: center;
+  max-width: 850px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
