--- a/styles.css
+++ b/styles.css
@@ -215,10 +215,10 @@ nav a:hover {
 }
 
 video {
-  border-top-left-radius: 100%;
-  border-top-right-radius: 100%;
-  border-bottom-right-radius: 100;
-  border-bottom-left-radius: 100;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
 }
 
 /* Hey bunny hey ----------------- */
