--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ nav a:hover {
 
 /* Sketchbook page Stylin' */
 .sketchbook {
-  background-color: #e1ccc2;
+  background-color: #fbeaf0;
 }
 
 video {
@@ -219,11 +219,13 @@ video {
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
+  margin-top: 25px;
 }
 
 /* Hey bunny hey ----------------- */
 .hey-bunny-page {
   background-color: #E8F5CD;
+  margin: 50px;
 }
 
 
