--- a/sketchbook/URL-styling.CSS
+++ b/sketchbook/URL-styling.CSS
@@ -1,5 +1,6 @@
 body {
-    background-color: #f2f2f2;
+    background-image: url("images/pexels-ron-lach-10526880.jpg");
+    /*background-color: #f2f2f2; */
     font-family: 'Azeret Mono', monospace;
     font-size: 1.5em;
     margin: 100px;
@@ -43,4 +44,8 @@ h1 {
   code {
     background: white;
     padding: 5px;
+  }
+
+  section {
+    margin-top: 100px;
   }
