revert to no background image

--- a/sketchbook/URL-styling.CSS
+++ b/sketchbook/URL-styling.CSS
@@ -1,6 +1,5 @@
 body {
-    background-image: url("images/pexels-ron-lach-10526880.jpg");
-    /*background-color: #f2f2f2; */
+    background-color: #f2f2f2;
     font-family: 'Azeret Mono', monospace;
     font-size: 1.5em;
     margin: 100px;
