--- a/sketchbook/CSS-variables/CSS-variables-styles.css
+++ b/sketchbook/CSS-variables/CSS-variables-styles.css
@@ -1,4 +1,5 @@
 body {
     font-family: 'Azeret Mono', monospace;
-    background-image: url()
+    background-image: url(pexels-karolina-grabowska-4464438.jpg);
+    background-repeat: no-repeat;
 }
