--- a/sketchbook/CSS-variables/CSS-variables-styles.css
+++ b/sketchbook/CSS-variables/CSS-variables-styles.css
@@ -4,3 +4,18 @@ body {
     margin-left: 5%;
     background-color: linen;
 }
+
+h1 {
+    font-size: 
+}
+
+p {
+    line-height: 1.5em;
+    max-width: 55%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5rem;
+}
+nav {
+    margin-top: 100px;
+}
