--- a/freecodecamp/product-page/styles.css
+++ b/freecodecamp/product-page/styles.css
@@ -1,11 +1,8 @@
 * {
+    background-color: rgb(253, 232, 239, 0.2);
     font-family: 'Instrument Sans', sans-serif;
 }
 
-nav {
+/* classes */
 
-}
 
-.email {
-    
-}
