--- a/freecodecamp/product-page/styles.css
+++ b/freecodecamp/product-page/styles.css
@@ -13,12 +13,21 @@ h2 {
     color: #E81E61;
     font-size: 36px;
     font-weight: 500;
+    text-align: center;
 }
 
 h3 {
     color:#E81E61;
     font-size: 24px;
     font-weight: 600;
+}
+
+h4 {
+    background: #FF9899;
+font-size: 1.25rem;
+font-weight: 500;
+line-height: normal;
+text-align: center;
 }
 
 p {
@@ -28,8 +37,117 @@ p {
     font-weight: 400;
 }
 
+nav a{
+    color: #000;
+    leading-trim: both;
+    text-edge: cap;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color:#E81E61;
+}
+
 ul {
     list-style-type: none; 
 }
 /* classes */
+.product-name {
+    background: #FF9899;
+    width: 21.875rem;
+    height: 4.5rem;
+    flex-shrink: 0;
+}
 
+.product-options {
+    display: flex;
+    flex-direction: row;
+    gap: 1.88rem;
+}
+.product-price {
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.product-description {
+    color: #000;
+font-size: 1rem;
+font-weight: 400;
+line-height: normal;
+}
+
+/* IDs */
+#button-style {
+    background: #FF9899;
+    display: inline-flex;
+padding: 0.625rem;
+align-items: flex-start;
+gap: 0.625rem;
+}
+
+#footer-links a {
+    color: #000;
+    font-family: Instrument Sans;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration: none;
+}
+
+#footer-links a:hover {
+    color:#E81E61;
+}
+
+#footer-links p {
+    color: #000;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#product-1 {
+    border: 1px solid #000;
+    display: flex;
+width: 21.875rem;
+height: 21.875rem;
+padding: 1.25rem;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 1.875rem;
+flex-shrink: 0;
+}
+
+#product-2 {
+    border: 1px solid #000;
+    display: flex;
+width: 21.875rem;
+height: 21.875rem;
+padding: 1.25rem;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 1.875rem;
+flex-shrink: 0;
+}
+
+#product-3 {
+    border: 1px solid #000;
+    display: flex;
+width: 21.875rem;
+height: 21.875rem;
+padding: 1.25rem;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 1.875rem;
+flex-shrink: 0;
+}
