--- a/freecodecamp/product-page/styles.css
+++ b/freecodecamp/product-page/styles.css
@@ -56,10 +56,14 @@ ul {
     list-style-type: none; 
 }
 
-video {
-    margin: 50px auto;
-}
 /* classes */
+.body-main {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1440px;
+    padding: 100px;
+    background-color: pink;
+}
 .product-name {
     background: #FF9899;
     width: 21.875rem;
@@ -84,6 +88,21 @@ video {
 font-size: 1rem;
 font-weight: 400;
 line-height: normal;
+}
+
+.select {
+    background: #000;
+    color: white;
+    display: flex;
+padding: 0.625rem;
+align-items: flex-start;
+gap: 0.625rem;
+}
+
+.video-content {
+    width: 960px;
+    height: 540px;
+    margin: 100px auto;
 }
 
 /* IDs */
@@ -126,7 +145,7 @@ padding: 1.25rem;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-gap: 1.875rem;
+gap: 1rem;
 flex-shrink: 0;
 }
 
