--- a/freecodecamp/product-page/styles.css
+++ b/freecodecamp/product-page/styles.css
@@ -3,6 +3,13 @@
     font-family: 'Instrument Sans', sans-serif;
 }
 
+header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
 h1 {
     color: #E81E61;
     font-size: 50px;
@@ -65,6 +72,7 @@ li {
 
 /* classes */
 .body-main {
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     max-width: 1440px;
